install solc version 0.4.16

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ethers": "^4.0.38"
+    "ethers": "^4.0.38",
+    "solc": "^0.4.16"
   }
 }
