--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "ethers": "^4.0.38",
     "express": "^4.17.1",
     "solc": "^0.4.16"
