--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.19.0",
     "ethers": "^4.0.38",
     "express": "^4.17.1",
-    "solc": "^0.4.16"
+    "solc": "^0.4.16",
+    "web3": "^1.2.2"
   }
 }
