--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.19.0",
+    "dotenv": "^8.2.0",
+    "ethereumjs-tx": "^2.1.1",
     "ethers": "^4.0.38",
     "express": "^4.17.1",
     "solc": "^0.4.16",
